feat: ajout fichiers config, env, App, main, CI GitHub

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-// TODO: Implement .env.example
+# API KEYS
+VITE_OPENAI_API_KEY=your-openai-key
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
+VITE_SHOPIFY_API_KEY=your-shopify-key
+VITE_BIGBUY_API_KEY=your-bigbuy-key
+VITE_TRACKING_API_KEY=your-17track-key
