--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.30",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^5.0.0"
   }
