--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky install",
+    "codex": "tsx codex/codex-ultimate.ts",
+    "codex:full": "tsx codex/codex-ultimate.ts 3"
   },
   "dependencies": {
     "axios": "^1.6.5",
@@ -28,6 +31,7 @@
     "tailwindcss": "^3.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "husky": "^9.0.7"
   }
 }
