--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.312.0",
+    "openai": "^5.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3",
@@ -24,14 +25,17 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.1",
     "@types/node": "^24.0.12",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.16",
+    "husky": "^9.0.7",
     "postcss": "^8.4.30",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "vite": "^5.0.0",
-    "husky": "^9.0.7"
+    "vite": "^5.0.0"
   }
 }
