--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "module": "ESNext",
     "moduleResolution": "Node",
-    "types": ["node"],
+    "types": ["node", "react", "react-dom"],
     "skipLibCheck": true,
     "allowJs": false,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "resolveJsonModule": true,
@@ -19,6 +20,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["codex/**/*", "src"],
-  "exclude": ["node_modules"]
+  "include": ["src", "codex/**/*", "types.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
