--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 // TODO: Implement .gitignore.env.local
 .vercel
+
+# macOS
+.DS_Store
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+coverage/
+
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+build/
+
