Implement routing and pages

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3",
-    "tailwind-variants": "^0.1.0"
+    "tailwind-variants": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.6"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.1",
