Fix build errors and add OpenAI page

--- a/extension_chrome/manifest.json
+++ b/extension_chrome/manifest.json
@@ -1,1 +1,8 @@
-// TODO: Implement manifest.json
+{
+  "manifest_version": 3,
+  "name": "Dropflow Extension",
+  "version": "1.0.0",
+  "action": {
+    "default_popup": "popup.html"
+  }
+}
